syntax = "proto2";
package qzzjh;

enum SUBID
{
//场景消息
  SC_GAMESCENE_FREE				=		201	;						//空闲场景消息
  SC_GAMESCENE_CALL				=		202	;					   	//叫庄场景消息
  SC_GAMESCENE_SCORE			=		203	;						//下注场景消息
  SC_GAMESCENE_OPEN				=		204	;						//开牌场景消息
  SC_GAMESCENE_END				=		205	;						//游戏结束

//服务器命令结构
  SUB_S_GAME_START				=		100	;						//游戏开始
  SUB_S_CALL_BANKER				=		101	;						//叫庄[CMD_S_CallBanker]
  SUB_S_CALL_BANKER_RESULT		=		102	;						//叫庄结果[CMD_S_CallBankerResult]
  SUB_S_ADD_SCORE_RESULT		=		103	;						//下注结果[CMD_S_AddScoreResult]
  SUB_S_SEND_CARD				=		104	;						//发牌消息[CMD_S_SendCard]
  SUB_S_OPEN_CARD_RESULT		=		105	;						//开牌结果[CMD_S_OpenCardResult]
  SUB_S_GAME_END                =		106	;						//游戏结束[CMD_S_GameEnd]
  SUB_S_OPERATE_FAIL			=		107	;						//操作失败
  SUB_S_GAME_START_AI      		=		108 ;

//客户端往服务器端发消息(C->S)
  SUB_C_CALL_BANKER				=	    1	;						//叫庄消息[CMD_C_CallBanker]
  SUB_C_ADD_SCORE				=		2	;						//下注消息[CMD_C_AddScore]
  SUB_C_OPEN_CARD				=		3	;						//开牌消息[空消息]
}


//空闲状态
message MSG_GS_FREE
{
	required 	double						dCellScore=1;				//基础积分
	required	int32						cbReadyTime=2;				//准备时间
	repeated	int32						cbJettonMultiple=3;			//下注倍数
	repeated	int32						cbCallBankerMultiple=4;			//叫庄倍数

	optional 	int32						dwUserID=5;
	optional	string						szNickName=6;
	optional	int32						szHeadUrl=7;
	optional	string						szLocation=8;
	optional	int32						cbHeadIndex=9;
	optional	int32						cbGender=10;
	optional	int32						cbVipLevel=11;
	optional	int32						cbVipLevel2=12;
	optional	double						llScore=13;
	optional	int32						wTableID=14;
	optional	int32						wChairID=15;
	optional	int32						usStatus=16;
};

//叫庄状态
message MSG_GS_CALL
{
	required double							dCellScore=1;				//基础积分
	required	int32						cbTimeLeave=2;				//剩余时间
	repeated	int32						cbPlayStatus=3;				//游戏中玩家(1打牌玩家)
	repeated	int32						sCallBanker=4;				//叫庄标志(-1:未叫; 0:不叫; 1:叫庄)

	repeated	int32						cbJettonMultiple=5;			//下注倍数
	repeated	int32						cbCallBankerMultiple=6;			//叫庄倍数


	optional 	int32						dwUserID=7;
	optional	string						szNickName=8;
	optional	int32						szHeadUrl=9;
	optional	string						szLocation=10;
	optional	int32						cbHeadIndex=11;
	optional	int32						cbGender=12;
	optional	int32						cbVipLevel=13;
	optional	int32						cbVipLevel2=14;
	optional	double						llScore=15;
	optional	int32						wTableID=16;
	optional	int32						wChairID=17;
	optional	int32						usStatus=18;
	optional 	string 	roundId   = 19;
};

//下注状态
message MSG_GS_SCORE
{
	required 	double						dCellScore=1;				//基础积分
	required	int32						cbTimeLeave=2;				//剩余时间
	repeated	int32						cbPlayStatus=3;				//游戏中玩家(1打牌玩家)
	required	int32						wBankerUser=4;				//庄家用户
	required	int32						cbBankerMultiple=5;			//庄家倍数
	repeated	int32						cbUserJettonMultiple=6;			//闲家下注倍数(0表示还没有下注)
	repeated	int32						cbJettonMultiple=7;			//下注倍数
	repeated	int32						cbCallBankerMultiple=8;			//叫庄倍数


	optional 	int32						dwUserID=9;
	optional	string						szNickName=10;
	optional	int32						szHeadUrl=11;
	optional	string						szLocation=12;
	optional	int32						cbHeadIndex=13;
	optional	int32						cbGender=14;
	optional	int32						cbVipLevel=15;
	optional	int32						cbVipLevel2=16;
	optional	double						llScore=17;
	optional	int32						wTableID=18;
	optional	int32						wChairID=19;
	optional	int32						usStatus=20;
	optional 	string 	roundId   = 21;
};

//开牌状态
message MSG_GS_OPEN
{
	required 	double						dCellScore=1;				//基础积分
	required	int32						cbTimeLeave=2;				//剩余时间
	repeated	int32						cbPlayStatus=3;				//游戏中玩家(1打牌玩家)
	required	int32						wBankerUser=4;				//庄家用户
	required	int32						cbBankerMutiple=5;			//庄家倍数

	repeated	int32						cbIsOpenCard=6;				//是否开牌
	repeated	int32						cbCardType=7;				//牌型
	repeated	int32						cbCardData=8;				//牌数据
	repeated	int32						cbHintCard=9;				//牌数据(前三张牛牛，后两张点数)
	repeated	int32						cbUserJettonMultiple=10;		//闲家下注倍数

	repeated	int32						cbJettonMultiple=11;			//下注倍数
	repeated	int32						cbCallBankerMultiple=12;		//叫庄倍数

	optional 	int32						dwUserID=13;
	optional	string						szNickName=14;
	optional	int32						szHeadUrl=15;
	optional	string						szLocation=16;
	optional	int32						cbHeadIndex=17;
	optional	int32						cbGender=18;
	optional	int32						cbVipLevel=19;
	optional	int32						cbVipLevel2=20;
	optional	double						llScore=21;
	optional	int32						wTableID=22;
	optional	int32						wChairID=23;
	optional	int32						usStatus=24;
	optional 	string 	roundId   = 25;
};


//游戏开始
message CMD_S_GameStart
{
	repeated	int32						cbPlayStatus=1;								//用户状态(1打牌玩家)
	required	int32						cbCallBankerTime=2;										//抢庄时间
	repeated	int32						cbCallBankerMultiple=3;			//叫庄倍数
	required 	string 	roundId   = 4;
};

//叫庄
message CMD_S_CallBanker
{
    required	int32						wCallBankerUser=1;										//叫庄玩家 chairId
    required	int32						cbCallMultiple=2;										//叫庄倍数(0:不叫 其他数字表示叫庄倍数)
};

//叫庄结果
message CMD_S_CallBankerResult
{
	required	int32						dwBankerUser=1;											//确定的庄家
    repeated	int32						cbCallBankerUser=2;                                     //叫庄的玩家[没叫的是0;叫庄是1]
	required	int32						cbAddJettonTime=3;										//下注时间
	required	int32						cbRandBanker=4;											//是否随机庄家
	repeated	int32						cbJettonMultiple=5;			//下注倍数
};

//下注结果
message CMD_S_AddScoreResult
{
    required	int32						wAddJettonUser=1;										//下注玩家
	required	int32						cbJettonMultiple=2;										//下注倍数
};

//发牌结果
message CMD_S_SendCard 
{
	repeated	int32						cbSendCard=1;									//本家牌数据
    repeated	int32						cbOxCard=2;                                     //提牌数据
	required	int32						cbCardType=3;												//牌型
	required	int32						cbOpenTime=4;												//开牌时间
};

//开牌结果
message CMD_S_OpenCardResult
{
	required	int32						wOpenCardUser=1;											//开牌玩家
	required	int32						cbCardType=2;												//牌型
	repeated	int32						cbCardData=3;									//牌数据
	repeated	int32						cbOxCardData=4;								//牌数据(前三张牛牛，后两张点数)
	//对应牌型：1:散牌 2:对子 3:顺子 4:金花(同花) 5:顺金(同花顺) 6:豹子(炸弹)
};

//游戏结算
message CMD_S_GameEnd
{
	//required	int32						wBankerUser=1;											//庄家
	//required	int32						cbPlayStatus=2;								//玩家状态
	repeated	double						dLWScore=1;									//输赢分
	repeated 	double						dTotalScore=2;								//结算后的分数
	required	int32						cbEndType=3;
	repeated	int32						cbOperate=4;													//结算类型(0 正常结束 1 通杀 2 通赔)

};

//叫庄
message CMD_C_CallBanker  
{
	required	int32						cbCallFlag=1;											//叫庄标志(0:不叫 1;2;4:叫庄倍数)
};

//下注
message CMD_C_AddScore  
{
	required	int32						cbJettonIndex=2;										//倍数索引
};

message CMD_S_GameStartAi
{
    required int32							cbOXCardData = 1;	//扑克列表
    required int32                          isMaxCard    = 2;
};


////////////////////////////////////////////////////////////////////////////////
//玩家手牌
message HandCards
{
	optional int32 ty        = 1; //牌型
	optional bytes cards     = 2; //手牌
	optional int32 multi     = 3; //牌型倍数
}

////////////////////////////////////////////////////////////////////////////////
//当局游戏记录详情
message PlayerRecordDetail {
	optional string account      = 1; //账号/昵称
	optional int32 chairId       = 2; //座椅ID
	optional int32 isbanker      = 3; //是否庄家
	optional HandCards handcards = 4; //手牌数据
	optional int64 userscore     = 5; //携带积分
	optional int64 cellscore     = 6; //房间底注
	optional int32 multi         = 7; //下注/抢庄倍数
	optional int32 calcMulti     = 8; //牌局倍数
	optional int64 winLostScore  = 9; //输赢积分
}

////////////////////////////////////////////////////////////////////////////////
//当局游戏记录详情
message CMD_S_GameRecordDetail {
	optional int32 gameid              = 1; //游戏类型
	repeated PlayerRecordDetail detail = 2; //当局记录详情
}
